<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid_line_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/countries"
        app:layout_constraintBottom_toTopOf="@id/guid_line_center" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        android:background="@drawable/rectangle_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guid_line_center">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/top_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/explore_global_map_of_wind_weather_and_ocean_conditions"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/top_text_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/planning_your_trip_become_more_easier_with_weather_wizard_app_you_can_instantly_see_the_whole_world_weather_within_few_seconds"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/top_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:background="@drawable/rectangle_40"
            android:backgroundTint="@color/third"
            android:text="@string/get_started"
            android:enabled="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:backgroundTint="@color/third"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>